# aliyun-oss-cpp-sdk

./: .gitignore  BUILD.bazel  CHANGELOG  CMakeLists.txt  LICENSE  README.md  README_zh.md  WORKSPACE
.github/workflows/: linux-clang.yml  linux-gcc.yml  mac.yml  windows.yml
ptest/: CMakeLists.txt
ptest/src/: Config.cc  Config.h  Program.cc
sample/: CMakeLists.txt
sample/src/: Config.cc  Config.h  Program.cc
sample/src/LiveChannel/: LiveChannelSample.cc  LiveChannelSample.h
sample/src/bucket/: BucketSample.cc  BucketSample.h
sample/src/encryption/: EncryptionSample.cc  EncryptionSample.h
sample/src/object/: ObjectSample.cc  ObjectSample.h
sample/src/presignedurl/: PresignedUrlSample.cc  PresignedUrlSample.h
sample/src/service/: ServiceSample.cc  ServiceSample.h
sdk/: CMakeLists.txt
sdk/include/alibabacloud/oss/: Config.h  Const.h  Global.h  OssClient.h  OssEncryptionClient.h  OssFwd.h  OssRequest.h  OssResult.h  ServiceRequest.h  Types.h
sdk/include/alibabacloud/oss/auth/: Credentials.h  CredentialsProvider.h
sdk/include/alibabacloud/oss/client/: ClientConfiguration.h  RetryStrategy.h
sdk/include/alibabacloud/oss/encryption/: EncryptionMaterials.h
sdk/include/alibabacloud/oss/http/: DnsResolver.h  HttpClient.h  HttpHandler.h  HttpInterceptor.h  HttpRequest.h  HttpType.h
sdk/include/alibabacloud/oss/model/: AbortBucketWormRequest.h  AbortMultipartUploadRequest.h  AppendObjectRequest.h  AppendObjectResult.h  Bucket.h  CompleteBucketWormRequest.h  CompleteMultipartUploadRequest.h  (+73 more)
sdk/src/: Config.h.in  OssClient.cc  OssClientImpl.cc  OssClientImpl.h  OssEncryptionClient.cc  OssRequest.cc  ResumableBaseWorker.cc  ResumableBaseWorker.h  ResumableCopier.cc  ResumableCopier.h  ResumableDownloader.cc  ResumableDownloader.h  ResumableUploader.cc  ResumableUploader.h  ServiceRequest.cc
sdk/src/auth/: AuthSigner.cc  AuthSigner.h  AuthSignerV1.cc  AuthSignerV1.h  AuthSignerV4.cc  AuthSignerV4.h  CredentialsProvider.cc  HmacSha1Signer.cc  HmacSha1Signer.h  HmacSha256Signer.cc  HmacSha256Signer.h  SignGenerator.cc  SignGenerator.h  SignGeneratorV1.cc  SignGeneratorV1.h  SignGeneratorV4.cc  SignGeneratorV4.h  Signer.cc  Signer.h  SimpleCredentialsProvider.cc
sdk/src/client/: Client.cc  Client.h  ClientConfiguration.cc
sdk/src/encryption/: Cipher.cc  CipherOpenssl.cc  CryptoModule.cc  CryptoModule.h  CryptoStreamBuf.h  EncryptionMaterials.cc  OssEncryptionClient.cc
sdk/src/http/: CoroHttpClient.hpp  CurlHttpClient.cc  CurlHttpClient.h  HttpClient.cc  HttpClient.h  HttpMessage.cc  HttpMessage.h  HttpRequest.cc  HttpRequest.h  HttpResponse.cc  HttpResponse.h  Url.cc  Url.h
sdk/src/model/: AbortBucketWormRequest.cc  AbortMultipartUploadRequest.cc  AppendObjectRequest.cc  AppendObjectResult.cc  Bucket.cc  CompleteBucketWormRequest.cc  CompleteMultipartUploadRequest.cc  CompleteMultipartUploadResult.cc  CopyObjectRequest.cc  CopyObjectResult.cc  CreateBucketRequest.cc  CreateSelectObjectMetaRequest.cc  CreateSelectObjectMetaResult.cc  CreateSymlinkRequest.cc  CreateSymlinkResult.cc  DeleteBucketTaggingRequest.cc  DeleteObjectTaggingRequest.cc  DeleteObjectsRequest.cc  DeleteObjectsResult.cc  DownloadObjectRequest.cc  ExtendBucketWormRequest.cc  GeneratePresignedUrlRequest.cc  GetBucketEncryptionResult.cpp  GetBucketInfoResult.cc  GetBucketInventoryConfigurationResult.cpp  GetBucketLifecycleResult.cc  GetBucketStatResult.cc  GetBucketWebsiteResult.cc  GetBucketWormRequest.cc  GetBucketWormResult.cc  GetLiveChannelInfoResult.cc  GetLiveChannelStatResult.cc  GetObjectAclRequest.cc  GetObjectAclResult.cc  GetObjectByUrlRequest.cc  GetObjectMetaRequest.cc  GetObjectRequest.cc  GetObjectResult.cc  GetObjectTaggingRequest.cc  GetObjectTaggingResult.cc  (+47 more)
sdk/src/resumable/: ResumableCopier.cc  ResumableCopier.h  ResumableDownloader.cc  ResumableUploader.cc  ResumableUploader.h
sdk/src/signer/: HmacSha1Signer.cc  HmacSha1Signer.h  Signer.cc  Signer.h  SignerV1.cc  SignerV4.cc
sdk/src/utils/: Crc64.cc  Crc64.h  Executor.cc  Executor.h  FileSystemUtils.cc  FileSystemUtils.h  LogUtils.cc  LogUtils.h  SignUtils.cc  SignUtils.h  Utils.cc  Utils.h
test/: CMakeLists.txt
test/data/: ca-certificates.crt
test/src/: Config.cc  Config.h  Program.cc  Utils.cc  Utils.h
test/src/AccessKey/: AccessKeyTest.cc
test/src/Authorization/: AuthTest.cc
test/src/Bucket/: BucketAclSettingsTest.cc  BucketBasicOperationTest.cc  BucketCorsSettingsTest.cc  BucketEncryptionTest.cc  BucketEncryptionTest.cpp  BucketInventoryConfigurationTest.cc  BucketInventoryConfigurationTest.cpp  BucketLifecycleSettingsTest.cc  BucketLoggingSettingsTest.cc  BucketPolicySettingsTest.cc  BucketQosInfoTest.cc  BucketQosInfoTest.cpp  BucketRefersSettingsTest.cc  BucketRequestPaymentTest.cc  BucketStorageCapacityTest.cc  BucketTaggingtTest.cc  BucketTaggingtTest.cpp  BucketVersioningTest.cc  BucketWebsiteSettingsTest.cc  BucketWormSettings.cc
test/src/CoroMultipartUpload/: CoroMultipartUploadPartTest.cc
test/src/Encryption/: CipherTest.cc  CryptoObjectTest.cc  CryptoObjectVersioningTest.cc  CryptoResumableObjectTest.cc  CryptoStreamBufTest.cc
test/src/LiveChannel/: DeleteLiveChannelTest.cc  GenerateRTMPSignatrueUrlTest.cc  GetLiveChannelHistoryTest.cc  ListLiveChannelTest.cc  PostAndGetVodPlayListTest.cc  PutAndGetLiveChannelStatusTest.cc  PutAndGetLiveChannelTest.cc
test/src/MultipartUpload/: CallableTest.cc  MultipartUploadTest.cc  ObjectAsyncTest.cc  ResumableObjectTest.cc
test/src/Object/: ObjectAclTest.cc  ObjectAppendTest.cc  ObjectBasicOperationTest.cc  ObjectCallbackTest.cc  ObjectCopyTest.cc  ObjectEncodingTypeTest.cc  ObjectHashCheckTest.cc  ObjectProcessTest.cc  ObjectProgressTest .cc  ObjectRequestPaymentTest.cc  ObjectRestoreTest.cc  ObjectSignedUrlTest.cc  ObjectSymlinkTest.cc  ObjectTaggingTest.cc  ObjectTrafficLimitTest.cc  ObjectVersioningTest.cc  SelectObjectTest.cc
test/src/Other/: Crc64Test.cc  EndpointTest.cc  FileSystemUtilsFunctionTest.cc  HttpClientTest.cc  HttpsTest.cc  IpEndpointTest.cc  LogTest.cc  RateLimiterTest.cc  SignerTest.cc  UtilsFunctionTest.cc
(+1 files in other folders)
